ui/bits/css/relay/_relay.scss
@import 'card';

.relay-index {
  .box__top {
    flex-flow: row nowrap;
  }

  .new::before {
    font-size: 3em;
  }

  &__section {
    margin: 2em 0 1em 0;
  }
}

.relay-image {
  &--fallback {
    @extend %flex-center;
    justify-content: center;
    width: 100%;
    aspect-ratio: 2 / 1;
    background: linear-gradient(to bottom, $m-primary--alpha-70, $m-brag--alpha-70);
    background-repeat: no-repeat;
    box-shadow: 0 0 40px rgba(0, 0, 0, 0.3) inset;
    color: $c-font;
    text-shadow: 0 0 40px white;
    font-size: 3em;
  }
}

