let broadcast search input wrap to partially fix #15067

--- a/ui/bits/css/relay/_relay.scss
+++ b/ui/bits/css/relay/_relay.scss
@@ -1,10 +1,6 @@
 @import 'card';
 
 .relay-index {
-  .box__top {
-    flex-flow: row nowrap;
-  }
-
   .new::before {
     font-size: 3em;
   }
